--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -69,6 +69,11 @@
       <%= link_to "Se connecter", new_user_session_path, class: "button button-login dark" %>
     <% end %>
   </div>
+  <%# <div class="theme-switcher" style="margin-top: 16px;"> %>
+  <%# <%= link_to 'Clair', set_theme_path(theme: 'light'), class: 'button dark' %>
+  <%# <%= link_to 'Sombre', set_theme_path(theme: 'dark'), class: 'button dark' %>
+  <%# <%= link_to 'Système', set_theme_path(theme: 'system'), class: 'button dark' %>
+  <%# </div> %>
   <div class="link-header">
     <%= link_to "Mentions légales", mentionslegales_path%>
     <%= link_to "Politique de confidentialité", politiquedeconfidentialite_path%>
