--- a/app/assets/stylesheets/abstracts/_variables.scss
+++ b/app/assets/stylesheets/abstracts/_variables.scss
@@ -1,5 +1,8 @@
 $primary-color: #202020;
 $secondary-color: #fff;
 // Couleurs de texte
-$background-color: #f5f5f5;
+$background-color: #F7F7F7;
 $text-color: #52525D;
+// Couleurs dark mode
+$dark-background-color: #333;
+$dark-text-color: #E9E9E9;
