--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -49,14 +49,10 @@
 }
 
 .subtitle-card {
-  color: $primary-color;
   text-transform: uppercase;
   font-size: 20px;
   margin-top: 32px;
   display: flex;
-  a{
-    color: $primary-color;
-  }
 }
 
 .container-text-card {
@@ -71,7 +67,6 @@
 
 .description-card {
   margin-top: 16px;
-  color: $text-color;
   overflow-wrap: break-word;
 }
 
@@ -296,5 +291,49 @@
 
   .description-card {
     display: none;
+  }
+}
+
+
+
+@media (prefers-color-scheme: dark) {
+  .subtitle-card {
+    color: $secondary-color;
+    a{
+      color: $secondary-color;
+    }
+  }
+  .description-card {
+    color: $dark-text-color;
+  }
+  body.light .subtitle-card{
+    color: $primary-color;
+    a{
+      color: $primary-color;
+    }
+  }
+  body.light .description-card {
+    color: $text-color;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  .subtitle-card {
+    color: $primary-color;
+    a{
+      color: $primary-color;
+    }
+  }
+  .description-card {
+    color: $text-color;
+  }
+  body.dark .subtitle-card {
+    color: $secondary-color;
+    a{
+      color: $secondary-color;
+    }
+  }
+  body.dark .description-card {
+    color: $dark-text-color;
   }
 }
