--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -75,9 +75,9 @@
   <%# <%= link_to 'Système', set_theme_path(theme: 'system'), class: 'button dark' %>
   <%# </div> %>
   <div class="link-header">
-    <%= link_to "Mentions légales", mentionslegales_path%>
-    <%= link_to "Politique de confidentialité", politiquedeconfidentialite_path%>
-    <p><%= link_to "CGU", cgu_path%> | <%= link_to "Cookies", cookies_path%></p>
+    <%= link_to "Mentions légales", mentionslegales_path, class: "underline"%>
+    <%= link_to "Politique de confidentialité", politiquedeconfidentialite_path, class: "underline"%>
+    <p><%= link_to "CGU", cgu_path, class: "underline"%> | <%= link_to "Cookies", cookies_path, class: "underline"%></p>
     <a>©2024 - Omniscient Design</a>
   </div>
 </header>
