--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -33,10 +33,10 @@
       <p>Si votre designer n'est pas ici vous pouvez <a style="color:#FFF; font-weight:500;" href="<%= new_designer_path %>"> ajouter un designer ici</a></p>
     </div>
     <div>
-      <%= form.text_field :nom_oeuvre, placeholder: "Nom de l'oeuvre" %>
+      <%= form.text_field :nom_oeuvre, placeholder: "Nom de la référence" %>
     </div>
     <div>
-      <%= form.text_field :date_oeuvre, placeholder: "Date de l'oeuvre", id: "date-oeuvre-input" %>
+      <%= form.text_field :date_oeuvre, placeholder: "Date de la référence", id: "date-oeuvre-input" %>
       <div id="date-oeuvre-error"></div>
     </div>
     <div>
