--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -61,6 +61,17 @@
         <path d="M2 2.40039L11.2625 12.8504L2 23.3004" stroke="#202020" stroke-width="2.54357" stroke-linecap="square"/>
       </svg>
     <%end%>
+    <%= link_to user_contributions_path , class: "nav-link-profil" do %>
+      <div class="nav-link-inner">
+        <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M19.8934 33C21.4729 33 22.7652 31.7077 22.7652 30.1282H17.0216C17.0216 31.7077 18.2996 33 19.8934 33ZM28.5088 24.3846V17.2051C28.5088 12.7969 26.1539 9.10667 22.0472 8.13026V7.15385C22.0472 5.96205 21.0852 5 19.8934 5C18.7016 5 17.7396 5.96205 17.7396 7.15385V8.13026C13.6185 9.10667 11.278 12.7826 11.278 17.2051V24.3846L9.42571 26.2369C8.5211 27.1415 9.15289 28.6923 10.4308 28.6923H29.3416C30.6196 28.6923 31.2657 27.1415 30.3611 26.2369L28.5088 24.3846Z" fill="#202020"/>
+        </svg>
+        Mes Contributions
+      </div>
+      <svg width="13" height="26" viewBox="0 0 13 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 2.40039L11.2625 12.8504L2 23.3004" stroke="#202020" stroke-width="2.54357" stroke-linecap="square"/>
+      </svg>
+    <%end%>
     <%= link_to notifications_path, class: "nav-link-profil" do %>
       <div class="nav-link-inner">
         <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -95,7 +106,7 @@
             </clipPath>
           </defs>
         </svg>
-        Rapport de mise à jours
+        Rapport de mise à jour
       </div>
       <svg width="13" height="26" viewBox="0 0 13 26" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M2 2.40039L11.2625 12.8504L2 23.3004" stroke="#202020" stroke-width="2.54357" stroke-linecap="square"/>
