--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -78,6 +78,6 @@
     <%= link_to "Mentions légales", mentionslegales_path, class: "underline"%>
     <%= link_to "Politique de confidentialité", politiquedeconfidentialite_path, class: "underline"%>
     <p><%= link_to "CGU", cgu_path, class: "underline"%> | <%= link_to "Cookies", cookies_path, class: "underline"%></p>
-    <a>©2024 - Omniscient Design</a>
+    <p>©2024 - Omniscient Design</p>
   </div>
 </header>
