--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -58,7 +58,7 @@
       const selectedDesigners = document.querySelectorAll('#designers-list .hidden-check:checked').length;
       const selectedOeuvres = document.querySelectorAll('#oeuvres-list .hidden-check:checked').length;
       designerCount.textContent = `${selectedDesigners} designers sélectionnés`;
-      oeuvreCount.textContent = `${selectedOeuvres} œuvres sélectionnées`;
+      oeuvreCount.textContent = `${selectedOeuvres} références sélectionnées`;
     }
 
     checkboxes.forEach(checkbox => {
