--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -73,6 +73,9 @@ header li .active {
   flex-direction: column;
   gap: 1rem;
   padding-bottom: 3.75rem;
+  p{
+    font-size: 1rem;
+  }
 }
 
 .link-header a {
@@ -81,7 +84,7 @@ header li .active {
   transition: opacity 0.3s ease;
 
   &:hover {
-    opacity: 0.8;
+    opacity: 0.6;
   }
 }
 
