--- a/app/views/errors/internal_server_error.html.erb
+++ b/app/views/errors/internal_server_error.html.erb
@@ -1,6 +1,6 @@
 <section class="grid-1" style="height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; gap:16px">
   <%= image_tag "404.svg", alt: "", class: "home-index" %>
-  <p class="subtitle-top" style="color: #202020;">Erreur 404</p>
-  <h1 class="center">Il semblerait que cette page n’existe pas</h1>
+  <p class="subtitle-top" style="color: #202020;">Erreur 500</p>
+  <h1 class="center">Oups ! Une erreur interne du serveur s'est produite.</h1>
   <%= link_to 'Retour à l\'accueil', root_path, class: "button dark" %>
 </section>
