--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -1,6 +1,6 @@
 <section class="grid-1" style="height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; gap:16px">
   <%= image_tag "404.svg", alt: "", class: "home-index" %>
-  <p class="subtitle-top" style="color: #202020;">Erreur 404</p>
-  <h1 class="center">Il semblerait que cette page n’existe pas</h1>
+  <p class="subtitle-top" style="color: #202020;">Erreur 403</p>
+  <h1 class="center">Oups ! Vous n'avez pas la permission d'accéder à cette page.</h1>
   <%= link_to 'Retour à l\'accueil', root_path, class: "button dark" %>
 </section>
